--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ flutter:
   assets:
       - assets/images/blueberry.png
       - assets/images/fantastic.png
-      - assets/images/independence.png
+      - assets/images/pasta.png
+      - assets/images/hamburger.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
