--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  country_list_pick: ^1.0.1+6
+
   flutter:
     sdk: flutter
 
